# blitz-backend

./: .dockerignore  .env.local.example  .gitignore  020_product_image_overlays.sql  033_add_missing_columns.sql  034_add_error_code.sql  CLAUDE.md  CONTENT_GENERATION_MARKETING.md  Dockerfile  EMAIL_SEQUENCES.md  EMBEDDING_AI_ROUTER_INTEGRATION.md  EMBEDDING_DIMENSION_FIX.md  FEATURES_BY_TIER.md  FORCE_REBUILD.txt  HEAD_images.py  IMPLEMENTATION_SUMMARY.md  MARKETING_ANGLES_FRAMEWORK.md  MARKETING_SUMMARY.md  OBJECTION_HANDLING.md  Procfile  R2_STORAGE_COMPARISON.md  R2_STORAGE_IMPLEMENTATION_COMPLETE.md  R2_STORAGE_REFACTOR_SUMMARY.md  R2_STORAGE_USAGE.md  README.md  VIDEO_GENERATION_FIX.md  alembic.ini  check_tiers.py  cleanup_orphaned.py  cleanup_orphaned_images.py  database_schema.sql  delete_all_content.py  delete_orphaned_images.sql  fix_enums.py  migrate.py  migrate_compliance_status.py  nixpacks.toml  package-lock.json  package.json  populate_affiliates.py  (+9 more)
.claude/: settings.local.json
alembic/: env.py
app/: auth.py  config.py  main.py  schemas.py
docs/: 21-Day-Marketing-Campaign-Plan.md  ADDON_PACKAGE_STRATEGY.md  ADVANCED_FEATURES.md  AI_PLATFORM_MANAGER.md  AI_PROVIDER_CONFIG.md  CAMPAIGNFORGE_COMPARISON.md  CAMPAIGN_CREATION_GUIDE.md  CAMPAIGN_TIER_COMPARISON.md  CAMPAIGN_TIER_MIGRATION_SQL.md  CONVERSION_TRACKING_FUTURE.md  CORRECTED_CAMPAIGN_TIERS.md  COST_BREAKDOWN_BY_CONTENT_TYPE.md  DATABASE_MIGRATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DOUBLED_CAMPAIGNS_ANALYSIS.md  FINAL_CAMPAIGN_TIER_SUMMARY.md  FINAL_CORRECTED_TIER_TABLE.md  (+46 more)
(+234 files in other folders)
