[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blitz-backend"
version = "0.1.0"
description = "Blitz Marketing Automation Platform Backend"
requires-python = ">=3.11"
authors = [
    {name = "Blitz Team"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.4",
    "numpy>=1.26.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "boto3>=1.34.34",
    "httpx>=0.26.0",
    "Pillow>=10.4.0",
    "pydantic>=2.5.3",
    "loguru>=0.7.2"
]
